--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,16 @@
-Changes for 0.073_02    Thu Aug 17 21:15:58 CEST 2006
+Changes for 0.074       Fri Sep  8 13:12:37 CEST 2006
 =====================================================
-*   move away from Module::Install -- EU::MM can do what we need
-*   remove requires section from META.yml so CPAN.pm doesn't confuse itself
-*   remove module::install files
-*   update bundled modules
-*   depend on the newly released CPANPLUS::Dist::Build 0.04 if you prefer
-    Module::Build as your installer
-*   add --default-banlist and --default-ignorelist as options to cpan2dist
-    skipping often failing/troublesome modules 
-*   integrate pod with usage information to reduce overhead in cpan2dist
+ * remove the requires: section in META.yml; CPAN.pm 
+   thinks it's authoritive for requirement declarations
+   and therefor gets our prereqs wrong.
+*  replace CPANPLUS::Dist::Sample with the actual
+   functional CPANPLUS::Dist::Base
+*  increase the number of digits after the comma displayed
+   in version numbers from 4 to 6, so that stringified x.y.z
+   versions display properly in the Default shell.
+*  add the writing of intsall-logs automatically from the 
+   default shell
+*  update bundled modules
 
 Changes for 0.073_01    Wed Aug  2 15:40:38 CEST 2006
 =====================================================
