Import of KANE/CPANPLUS-0.77_02 from CPAN.
gitpan-cpan-distribution: CPANPLUS
gitpan-cpan-version:      0.77_02
gitpan-cpan-path:         KANE/CPANPLUS-0.77_02.tar.gz
gitpan-cpan-author:       KANE
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -38,7 +38,7 @@ where you need to use CPANPLUS but can not use a system installation.
 You can install all of CPANPLUS' dependencies like this, before 
 installing CPANPLUS itself by running:
 
-    $ perl bin/cpanp-boxed -i Bundle::CPANPLUS::Dependencies
+    $ perl bin/cpanp-boxed -s selfupdate dependencies 
 
 All the modules bundled are found in the 'inc/bundle' directory. If
 you, for whatever reason, wish to not install these from cpan, you
