--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+Changes for 0.79_01     Sun Apr 22 09:57:45 2007
+================================================
+* Updates to integrate perl-core integration. Regular users
+  do not need to upgrade.
+* Add clean up calls at the end of the tests as well if 
+  we're run from perl core. this is because perl core 
+  doesn't invoke our 'make clean', and files will be
+  left that aren't in the manifest.
+* Make the scan for 'cpanp-run-perl' also consider cpanp-run-
+  perl5.X.Y as it may be installed with the perl version as 
+  suffix explicitly
+* address: 26077: dependency on itself; CPANPLUS had a 
+  depenendency on the shell class you set as a default, even
+  if that was a shell provided with CPANPLUS itself.
+  This caused CPAN.pm to throw a fatal error, as it did not 
+  know how to resolve this dependency. CPANPLUS users were 
+  unaffected. Now, no dependency is added if the selected 
+  shell is bundled with CPANPLUS itself.
+* Add simple loadtest for CPANPLUS::Shell
+
 Changes for 0.78        Sat Mar 31 18:26:13 CEST 2007
 =====================================================
 * Promote 0.77_07 to stable
