--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+Changes for 0.84        Fri Dec 14 13:31:39 2007
+================================================
+* Promote 0.83_10 to stable.
+
+Changes for 0.83_10     Wed Nov 14 12:57:45 2007
+================================================
+* Various VMS patches from John M.
+* Skip tests for custom sources on Win32 if the full file
+  path is longer than 260 chars (longest file size supported
+  on Win32).
+* Depend on File::Fetch 0.13_04 for Win32 & VMS file:// support
+* Depend on Term::UI 0.18 for default shell option parsing
+
+Changes for 0.83_09     Fri Nov  9 14:17:14 2007
+================================================
+* Make sure to use $Config{path_sep} to create
+  environment variables portably. This addresses
+  a test failure on VMS.
+* Update 'use sudo' heuristics; if you have $ENV{PERL_MM_OPT}
+  set with an INSTALL, LIB or PREFIX option, we assume you
+  have write permissions to your install location, and you
+  do not need sudo. This can of course be overriden using
+  your config.
+
 Changes for 0.83_08     Sat Nov  3 18:35:54 2007
 ================================================
 * Apply adapted version of dmq's Win32 fixes for fetching
