--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Changes for 0.9005      Tue Jun 29 22:42:25 2010
+================================================
+* Corrected spelling mistakes in POD, pointed out by H.Merijn Brand
+* Amend SQLite source engine to set SYNCHRONOUS pragma to OFF
+* Make sure that Selfupdate checks if CPANPLUS::Dist::Build is
+  installed or not and update it if it is. Spotted by Ilmari
+* Apply a patch from Peter Ludikovsky RT #55782 that adds indexes
+  to Source::SQLite
+
 Changes for 0.9004      Sat May  8 22:21:04 2010
 ================================================
 * Applied a patch from Schwern RT #53133 "test failure occurs if
