--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Changes for 0.91        Fri Feb 11 22:43:31 2011
+================================================
+* Making a stable release
+
 Changes for 0.90_13     Mon Feb  7 10:26:35 2011
 ================================================
 * Fix Parse::CPAN::Meta prereq version
